changed work experience

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <h1 class="mb-0">Gianna
             <span class="text-primary">Wu</span>
           </h1>
-          <div class="subheading mb-5">252 S. Sunset Avenue · San Jose, CA 95116 · (408) 318-7616 ·
-            <a href="mailto:name@email.com">gianna7wu@gmail.com</a>
+          <div class="subheading mb-5">(408) 318-7616 ·
+            <a href="mailto:gianna7wu@gmail.com">gianna7wu@gmail.com</a>
           </div>
           <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
           <ul class="list-inline list-social-icons mb-0">
@@ -112,6 +112,17 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">NSF REU Data Science Research Assistant</h3>
+              <div class="subheading mb-3">Harvey Mudd College</div>
+              <p>Developed algorithms to discern the underlying variables in cell differentiation using mathematical and computational techniques such as principal component analysis, diffusion mapping, and K-means clustering.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">May 2018 - July 2018</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -171,7 +182,7 @@
               <h3 class="mb-0">Pomona College</h3>
               <div class="subheading mb-3">Bachelor of Arts</div>
               <div>Computer Science, Mathematics</div>
-              <p>GPA: 3.91</p>
+              <p>GPA: 3.90</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2015 - May 2019</span>
@@ -198,15 +209,6 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
               <i class="devicons devicons-java"></i>
             </li>
             <li class="list-inline-item">
@@ -214,6 +216,12 @@
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-wordpress"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-laravel"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-php"></i>
             </li>
           </ul>
 
@@ -224,16 +232,19 @@
               Java</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              C</li>
+              Python</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               SQL</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Python</li>
+              Matlab</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Matlab</li>  
+              R</li> 
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              C/C++</li>  
           </ul>
         </div>
       </section>
