added awards, resume, transcript, cover letter

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
               <div class="subheading mb-3">Bachelor of Arts</div>
               <div>Computer Science, Mathematics</div>
               <p>GPA: 3.90</p>
+              <p>For more information about my academics, check out my <a href="documents/resume.pdf" target="_blank">resume</a>, <a href="documents/coverletter.pdf" target="_blank">cover letter</a>, or
+                <a href="documents/transcript.pdf" target="_blank">transcript!</a></p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2015 - May 2019</span>
@@ -278,6 +280,10 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards</h2>
           <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Bruce Jay Levy Memorial Prize in Mathematics
+            </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Pomona College Scholar of Distinction</li>
