update transcript, resume, info

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <h1 class="mb-0">Gianna
             <span class="text-primary">Wu</span>
           </h1>
+          <div class=subheading mb-3>Backend Software Developer</div>
           <div class="subheading mb-5">(408) 318-7616 ·
             <a href="mailto:gianna7wu@gmail.com">gianna7wu@gmail.com</a>
           </div>
@@ -115,6 +116,17 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Junior Software Developer</h3>
+              <div class="subheading mb-3">Atlassian</div>
+              <p>I am a new grad hire on the Platform-as-a-Service (PaaS) Engineering team doing backend development in security and authentication. I love my team and working at Atlassian! I feel like I've found where I belong.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2019 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">NSF REU Data Science Research Assistant</h3>
               <div class="subheading mb-3">Harvey Mudd College</div>
               <p>Developed algorithms to discern the underlying variables in cell differentiation using mathematical and computational techniques such as principal component analysis, diffusion mapping, and K-means clustering.</p>
@@ -154,7 +166,7 @@
               <p>Proctor weekly mentor sessions for computer science and chemistry students.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2017 - Present</span>
+              <span class="text-primary">January 2017 - May 2019</span>
             </div>
           </div>
 
@@ -182,8 +194,8 @@
               <h3 class="mb-0">Pomona College</h3>
               <div class="subheading mb-3">Bachelor of Arts</div>
               <div>Computer Science, Mathematics</div>
-              <p>GPA: 3.90</p>
-              <p>For more information about my academics, check out my <a href="documents/resume.pdf" target="_blank">resume</a>, <a href="documents/coverletter.pdf" target="_blank">cover letter</a>, or
+              <p>GPA: 3.91</p>
+              <p>For more information about my academics, check out my <a href="documents/resume.pdf" target="_blank">resume</a> and 
                 <a href="documents/transcript.pdf" target="_blank">transcript!</a></p>
             </div>
             <div class="resume-date text-md-right">
@@ -211,6 +223,9 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
+              <i class="devicons devicons-go"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-java"></i>
             </li>
             <li class="list-inline-item">
@@ -229,6 +244,9 @@
 
           <!-- <div class="subheading mb-3">Workflow</div> -->
           <ul class="fa-ul mb-0">
+            <li>
+                <i class="fa-li fa fa-check"></i>
+                Go</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Java</li>
@@ -255,14 +273,12 @@
         <div class="my-auto">
           <h2>Interests</h2>
           <h5>Track and Field</h5>
-          <p>I have participated in track and field since sixth grade, specializing in the sprints and jumps. I started this sport on my middle school's team, persisted through high school as a Lynbrook High Viking, and am now competing for Pomona-Pitzer's Varsity Women's Track team. My favorite events include the 100m, long jump, and triple jump.</p>
+          <p>I have participated in track and field since sixth grade, specializing in the sprints and jumps. I started this sport on my middle school's team, persisted through high school as a Lynbrook High Viking and team captain, and finished my track career competing for and being team captain for Pomona-Pitzer's Varsity Women's Track team. My favorite events include the 100m, long jump, and triple jump. Chirp chirp! </p>
 
           <h5>Camp Kesem</h5>
           <p>One organization that I am incredibly passionate about is Camp Kesem, which is a non-profit organization
               dedicated to supporting children through and beyond their parents' cancer by providing a free, week-long summer
-              camp for these children. Specifically, the Claremont Colleges' chapter of Camp Kesem is in charge of hosting camp
-              for children in the Claremont area. If you would like to financially support my chapter, check out this <a href="http://donate.kesem.org/gianna_wu" target="_blank">link</a>
-              or shoot me an email at <a href="claremont@campkesem.org">claremont@campkesem.org</a>!</p>
+              camp for these children. Specifically, the Claremont Colleges' chapter of Camp Kesem is in charge of hosting camp for children in the Claremont area. </p>
 
           <h5>Music</h5>
           <p> I have also been playing the violin for about 10 years. In college, I have performed pieces such as Tchaikovsky's Violin
@@ -270,9 +286,7 @@
                 groups. Most recently, I was in a violin, viola, and piano trio called the Konfranna Trio, and we played Rebecca Clarke's Dumka Piano Trio.
           </p>
           <h5>Work</h5>
-          <p> I work as a Computer Science Mentor on campus. I tutor students in the introductory CS courses and help grade their assignments. I also got a new job this
-                semester as a Data Specialist at Scripps College Marketing and Communications! I will be working with their website and analyzing their 
-                current site infrastructure. More updates coming soon! </p>
+          <p> I have always enjoyed tutoring and have been doing it since eighth grade. I currently tutor grade school to high school mathematics and also help students write/edit their college essays. </p>
         </div>
       </section>
 
