--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
             <span class="text-primary">Wu</span>
           </h1>
           <div class=subheading mb-3>Backend Software Developer</div>
-          <div class="subheading mb-5">(408) 318-7616 ·
-            <a href="mailto:gianna7wu@gmail.com">gianna7wu@gmail.com</a>
-          </div>
           <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
           <ul class="list-inline list-social-icons mb-0">
             <!-- <li class="list-inline-item">
@@ -152,7 +149,7 @@
               <h3 class="mb-0">Computer Science Research Assistant</h3>
               <div class="subheading mb-3">Pomona College</div>
               <p>Lead developer of a program to analyze temporal data based on Allen’s Interval Algebra. 
-                Produced visual representations of calculations using the open-source program, JFreeChart</p>
+                Produced visual representations of calculations using the open-source program, JFreeChart. </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2017 - August 2017</span>
@@ -194,9 +191,8 @@
               <h3 class="mb-0">Pomona College</h3>
               <div class="subheading mb-3">Bachelor of Arts</div>
               <div>Computer Science, Mathematics</div>
-              <p>GPA: 3.91</p>
-              <p>For more information about my academics, check out my <a href="documents/resume.pdf" target="_blank">resume</a> and 
-                <a href="documents/transcript.pdf" target="_blank">transcript!</a></p>
+              <p>GPA: 3.92</p>
+              <p>Check out my <a href="documents/resume.pdf" target="_blank">resume</a>!</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2015 - May 2019</span>
